--- a/SuperHeroASP/Views/SuperHeroes/Delete.cshtml
+++ b/SuperHeroASP/Views/SuperHeroes/Delete.cshtml
@@ -26,7 +26,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Supprimer" class="btn btn-default" /> |
             @Html.ActionLink("Revenir a l'index", "Index")
         </div>
     }
